fixed dropdown getting cut off

--- a/src/css/mystyle.scss
+++ b/src/css/mystyle.scss
@@ -345,7 +345,7 @@ body {background-color: $base-color-grey;}
 
   .panel {
     margin-left: 53px;
-    overflow: hidden;
+    // overflow: hidden;
   }
 }
 
@@ -409,23 +409,4 @@ input.red, input.red:focus {
   --animate-duration: 200ms;
 }
 
-
-
-@keyframes donut-spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-.donutSpinner {
-    display: inline-block;
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    border-left-color: #5778F3;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    animation: donut-spin 1.2s linear infinite;
-}
 
